--- a/app/views/T1XV1edit.ejs
+++ b/app/views/T1XV1edit.ejs
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-	<title>Todo - Tangrammy</title>
+	<title>ZCar - Tangrammy</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 	<link rel="icon" type="image/ico" href="/img/favicon.ico">
@@ -31,7 +31,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li ><a href='/' title=''>Home</a></li>
-			<li class='active'><a href='/todo/list' title=''>Todo</a></li>
+			<li ><a href='/issues/list' title=''>Issues</a></li>
+			<li ><a href='/todo/list' title=''>Todo</a></li>
+			<li class='active'><a href='/zcar/list' title=''>ZCar</a></li>
 
           </ul>
           <ul class="nav navbar-nav pull-right">
@@ -63,49 +65,75 @@
     </div>
 	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-<h1>Modify Todo</h1>
+<h1>更新任务</h1>
 
-<form class='fields-section well col-md-12' method="post" action="/todo/update" target="submitFrame" >
+<form class='fields-section well col-md-12' method="post" action="/zcar/update" target="submitFrame" >
 
 <div class='row'>
 <div class='col-md-12 <%= (code != 200) ? "alert alert-danger": "" %>'><%= (code != 200) ? message : "" %></div>
 <div class='hidden'><input type='hidden' class='hidden' name='format' value='json'>
-<input type='hidden' class='hidden' name='app' value='todo'>
-<input type='hidden' class='hidden' name='Rid' value='<%= data["Rid"] %>'></div><div class='col-md-12'>		<div><label class='control-label title-label'>ID<B class='red'>*</B></label><div class='controls'>
+<input type='hidden' class='hidden' name='app' value='zcar'>
+<input type='hidden' class='hidden' name='Rid' value='<%= data["Rid"] %>'></div><div class="col-md-12">		<div><label class='control-label title-label'>ID<B class='red'>*</B></label><div class='controls'>
 		<div class='form-show' readonly=true><%= (data["F5"] || '') %><input type='hidden' class='hidden' name='F5' value='<%= data["F5"] || "" %>'></div></div></div>
 </div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Priority<B class='red'>*</B></label><div class='controls'>
-<% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
-			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >Low</label>
-			<label class='radio-inline col-md-2 orange'><input type='radio' name='F3' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/f4.png'>Medium</label>
-			<label class='radio-inline col-md-2 red'><input type='radio' name='F3' value='2'  <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/f5.png'>High</label></div></div></div></div>
-</div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Status<B class='red'>*</B></label><div class='controls'>
-<% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
-			<label class='radio-inline col-md-2 blue'><input type='radio' name='F2' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/b1.png'>Initial</label>
-			<label class='radio-inline col-md-2 green'><input type='radio' name='F2' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> ><img class='icon15' src='/img/s/b2.png'>In progress</label>
-			<label class='radio-inline col-md-2 orange'><input type='radio' name='F2' value='2'  <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> >Paused</label>
-			<label class='radio-inline col-md-2 black'><input type='radio' name='F2' value='3'  <%= (val.contains( "," + "3" + ",")) ? "checked=true" : "" %> >Finished</label></div></div></div></div>
-</div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Name<B class='red'>*</B></label><div class='controls'>
+<div class="col-md-12">		<div><label class='control-label title-label'>Name<B class='red'>*</B></label><div class='controls'>
 <input type='text' class='form-control' name='F0' value='<%= data["F0"] || "" %>' maxlength=200 minlength=3 required=true unique=true placeholder='Todo name'></div><span class='errormsg'>3~200 chars</span></div>
 </div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Detail<B class='red'>*</B></label><div class='controls'>
+<div class="col-md-12">		<div><label class='control-label title-label'>Detail<B class='red'>*</B></label><div class='controls'>
 <textarea class='form-control richtext' name='F1' ><%= data["F1"] || "" %></textarea></div></div>
 </div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Owner<B class='red'>*</B></label><div class='controls'>
+<div class="col-md-12">		<div><label class='control-label title-label'>Status<B class='red'>*</B></label><div class='controls'>
+<% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> ><img src='/img/s/b1.png'><span class='blue'>Initial</span></label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> ><img src='/img/s/b2.png'><span class='green'>In progress</span></label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='2'  <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> ><span class='orange'><img src=' /img/s/b4.png '>Paused</span></label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='3'  <%= (val.contains( "," + "3" + ",")) ? "checked=true" : "" %> ><span class='black'><img src=' /img/s/b7.png '>Finished</span></label>
+			<label class='radio-inline '><input type='radio' name='F2' value='4'  <%= (val.contains( "," + "4" + ",")) ? "checked=true" : "" %> ><img src=' /img/s/b6.png '> Released</label></div></div></div></div>
+</div>
+<div class="col-md-12">		<div><label class='control-label title-label'>Priority<B class='red'>*</B></label><div class='controls'>
+<% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> ><img src=' /img/s/f7.png '>Low</label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> ><img src='/img/s/f4.png'><span class='orange'>Medium</span></label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='2'  <%= (val.contains( "," + "2" + ",")) ? "checked=true" : "" %> ><img src='/img/s/f5.png'><span class='red'>High</span></label></div></div></div></div>
+</div>
+<div class="col-md-12">		<div><label class='control-label title-label'>Owner<B class='red'>*</B></label><div class='controls'>
 <input type='text' class='form-control' name='F4' value='<%= data["F4"] || "" %>' required=true unique=true placeholder='Todo detail despcription'></div></div>
 </div>
-<div class='col-md-12'><label class='control-label title-label'>Update</label>
-		<div class='form-show' readonly=true ><%= (data["Update"] || '') %></div></div>
-    <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
+<div class="col-md-12">		<div><label class='control-label title-label'>发布日期<B class='red'>*</B></label><div class='controls'>
+<div><input type='text' name='F6' value='<%= data["F6"] || "" %>' class='form-control datesection' data-format='YYYY-MM-DD' maxlength=10 required=true placeholder='如果是非上线任务，则填完成日期'></input></div></div></div>
+</div>
+<div class="col-md-12">		<div><label class='control-label title-label'>开始日期</label><div class='controls'>
+<div><input type='text' name='F7' value='<%= data["F7"] || "" %>' class='form-control datesection' data-format='YYYY-MM-DD' maxlength=10></input></div></div></div>
+</div>
+<div class="col-md-12">		<div><label class='control-label title-label'>完成日期</label><div class='controls'>
+<div><input type='text' name='F8' value='<%= data["F8"] || "" %>' class='form-control datesection' data-format='YYYY-MM-DD' maxlength=10></input></div></div></div>
+</div>
+<div class="col-md-12">		<div><label class='control-label title-label'>说明</label><div class='controls'>
+<textarea class='form-control richtext' name='F9' ><%= data["F9"] || "" %></textarea></div></div>
+</div><div class="col-md-auto col-md-12">		<div><label class='control-label title-label'>代码行数</label><div class='controls'>
+<div class='input-group'><span class='input-group-addon'><b >%</b></span><input type='text' class='form-control' name='F10' value='<%= data["F10"] || "" %>' placeholder='代码量，预估或实践'><span class='input-group-addon'>.00</span></div></div></div>
+</div><div class="col-md-auto col-md-12">		<div><label class='control-label title-label'>Bug量</label><div class='controls'>
+<div class='input-group'><span class='input-group-addon'><b >%</b></span><input type='text' class='form-control' name='F11' value='<%= data["F11"] || "" %>' placeholder='出现bug数'><span class='input-group-addon'>.00</span></div></div></div>
+</div><div class="col-md-12">		<div><label class='control-label title-label'>Bug信息</label><div class='controls'>
+<textarea class='form-control richtext' name='F12' ><%= data["F12"] || "" %></textarea></div><span class='errormsg'>bug的等级，描述，对应状态，或者是bug的链接</span></div>
+</div>
+                                     <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
 <div class="col-md-0"><button type="submit" class="btn btn-primary"    style="min-width:80px;" title="">Save Changes </button></div>
-<div class="col-md-0"><a class="btn btn-link"  href="/todo/list" style="min-width:80px;" title="">Cancel</a></div>
+<div class="col-md-0"><a class="btn btn-link"  href="/zcar/list" style="min-width:80px;" title="">Cancel</a></div>
 </div></div>
 <span name='history' class='col-md-12'></span>
-<script type='text/javascript'>getOPLogs('T1', 'V1', '<%= data["Rid"] %>');</script></div>
+</div>
 </form>
 <iframe id='submitFrame' name='submitFrame' class='hidden'></iframe>
+<link rel='stylesheet' href='/css/bootstrap-datetimepicker.min.css'>
+	<script src='/js/moment.js'></script>
+	<script src='/js/bootstrap-datetimepicker.min.js'></script>
+	<script type='text/javascript'>  
+	$('.datesection').each(function() { $(this).datetimepicker({ format: $(this).attr('data-format'), language: 'en', pickTime: false, pick12HourFormat: false});  $(this).change(); }); 
+	$('.timesection').each(function() { $(this).datetimepicker({ format: $(this).attr('data-format'), language: 'en', pickDate: false, pick12HourFormat: false});  $(this).change();}); 
+	$('.datetimesection').each(function() { var pk = $(this).datetimepicker({ format: $(this).attr('data-format'), language: 'en', pick12HourFormat: false}); $(this).val(new Date().format($(this).attr('data-format')));  $(this).change();}); 
+
+ </script>
 
 	<div class="go-top">
 	<div class="btn-group">
@@ -141,17 +169,13 @@
 	<footer>
 	<div class="col-md-12 form-group small">
 		<ul class="pager nomargin pull-left">
-		<li><label>Dependencies：</label></li>
-		<li><a target="_blank" href="https://nodejs.org/">NodeJS</a></li>
-		<li><a target="_blank" href="http://www.mongodb.org/">mongoDB</a></li>
-		<li><a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a></li>
-		<li><a target="_blank" href="http://jquery.com/">jQuery</a></li>
-		<li><a target="_blank" href="https://github.com/">GitHub</a></li>
-		<li><a target="_blank" href="http://itman70s.github.io/richtext">Rich Text</a></li>
+		<li><label>推荐网站:</label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
+		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.4.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
