--- a/app/views/T1XV1list.ejs
+++ b/app/views/T1XV1list.ejs
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-	<title>Todo - Tangrammy</title>
+	<title>ZCar - Tangrammy</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 	<link rel="icon" type="image/ico" href="/img/favicon.ico">
@@ -31,7 +31,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li ><a href='/' title=''>Home</a></li>
-			<li class='active'><a href='/todo/list' title=''>Todo</a></li>
+			<li ><a href='/issues/list' title=''>Issues</a></li>
+			<li ><a href='/todo/list' title=''>Todo</a></li>
+			<li class='active'><a href='/zcar/list' title=''>ZCar</a></li>
 
           </ul>
           <ul class="nav navbar-nav pull-right">
@@ -63,40 +65,44 @@
     </div>
 	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-<h1>Todo  <small><a class="btn btn-link" href="/todo/new" href="/todo/new" style="min-width:80px;"><img src="/img/add.png">New Todo</a></small></h1>
+<h1>ZCar  <small><a class="btn btn-link" href="/zcar/new" name="submit"><img src="/img/add.png">新任务</a></small></h1>
 <form class='navbar-form navbar-left' action='javascrip:doFilter();'>
 <div class='form-group small' style='width:230px'><div class='input-group'><input type='text' name='filterstring' class='form-control data-filter' value='<%= (request.u.data["condition"] || "") %>' placeholder='Search in page'>
 <div class='input-group-btn'><a class='btn btn-default' filter='' title='Clear search text'>X</a></div></div></div>
-<div class='form-group small'><a class="filter" href="javascript:;" filter="span class=&quot;green" green"=""><span style="color: rgb(0, 128, 0);">In progress</span></a>
-<a class="filter" href="javascript:;" filter="span class=" blue"=""><font color="#0000ff">Initial</font></a>
-
-
+<div class='form-group small'><a class='filter' href='javascript:;' filter='fid="F2"><img src="/img/s/b2.png">' ><span class='green'>In progress</span></a>
+<a class='filter' href='javascript:;' filter='fid="F2"><img src="/img/s/b1.png">' ><span class='blue'>Inital</span></a>
 </div>
 	</form><div class='col-md-6 hidden'>
 <div class='input-group'><input type='text' name='condition' class='form-control'><span name='search' class='input-group-addon glyphicon glyphicon-search'></span></div>
 	</div><% function getF3(val) { 
   var opts = ""; 
   val = "," + (val || "") + ","; 
-  if (val.contains( "," + "0" + ",")) {    opts += " "; } 
-   if (val.contains( "," + "1" + ",")) {    opts += "<span class='orange'><img class='icon15' src='/img/s/f4.png' alt='Medium' title='Medium'> </span> "; } 
-   if (val.contains( "," + "2" + ",")) {    opts += "<span class='red'><img class='icon15' src='/img/s/f5.png' alt='High' title='High'> </span> "; } 
+  if (val.contains( "," + "0" + ",")) {    opts += "<img src=' /img/s/f7.png '> "; } 
+   if (val.contains( "," + "1" + ",")) {    opts += "<img src='/img/s/f4.png'> "; } 
+   if (val.contains( "," + "2" + ",")) {    opts += "<img src='/img/s/f5.png'> "; } 
    return opts; } %>
 <% function getF2(val) { 
   var opts = ""; 
   val = "," + (val || "") + ","; 
-  if (val.contains( "," + "0" + ",")) {    opts += "<span class='blue'><img class='icon15' src='/img/s/b1.png' alt='Initial' title='Initial'> </span> "; } 
-   if (val.contains( "," + "1" + ",")) {    opts += "<span class='green'><img class='icon15' src='/img/s/b2.png' alt='In progress' title='In progress'> </span> "; } 
-   if (val.contains( "," + "2" + ",")) {    opts += "<span class='orange'></span> "; } 
-   if (val.contains( "," + "3" + ",")) {    opts += "<span class='black'></span> "; } 
+  if (val.contains( "," + "0" + ",")) {    opts += "<img src='/img/s/b1.png'> "; } 
+   if (val.contains( "," + "1" + ",")) {    opts += "<img src='/img/s/b2.png'> "; } 
+   if (val.contains( "," + "2" + ",")) {    opts += "<img src=' /img/s/b4.png '> "; } 
+   if (val.contains( "," + "3" + ",")) {    opts += "<img src=' /img/s/b7.png '> "; } 
+   if (val.contains( "," + "4" + ",")) {    opts += "<img src=' /img/s/b6.png '> "; } 
    return opts; } %>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='todo'></div><table class='table table-hover'>
+<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='zcar'></div><table class='table table-hover'>
   <thead>
-	<tr><th class='wid30'  Fid='F5'>ID</th>
-<th class='wid20'  Fid='F3'>P</th>
-<th class='wid20'  Fid='F2'>S</th>
-<th class='wid90'  Fid='diy'></th>
-<th  Fid='F0'>Todo</th>
-<th class='col-md-1'  Fid='F4'>Owner</th>
+	<tr><th class='wid30' Fid='F5'>ID</th>
+<th class='wid20' Fid='F3'>P</th>
+<th class='wid20' Fid='F2'>S</th>
+<th class='wid90' Fid='diy'></th>
+<th Fid='F0'>任务</th>
+<th class='col-md-2' Fid='F4' width='undefined'>Owner</th>
+<th Fid='F6' class='' width='90px'>发布日期</th>
+<th Fid='F7' class='' width='90px'>开始日期</th>
+<th Fid='F8' class='' width='90px'>结束日期</th>
+<th class='number ' Fid='F10' width='60px'>代码量</th>
+<th class='number ' Fid='F11' width='60px'>Bug量</th>
 <th class='wid30' Fid='edit'></th>
 <th class='wid30' Fid='copy'></th>
 <th class='wid30' Fid='remove'></th>
@@ -105,30 +111,36 @@
   </thead>
   <tbody>
 	<% if(data.length < 1) { %>
-	<tr><td colspan="9">No recorder yet. Add one now? <a class="btn btn-link" href="/todo/new" href="/todo/new" style="min-width:80px;"><img src="/img/add.png">New Todo</a></td></tr>	<% }
+	<tr><td colspan="14">No recorder yet. Add one now? <a class="btn btn-link" href="/zcar/new" name="submit"><img src="/img/add.png">新任务</a></td></tr>	<% }
  var group = ""; for(var item in data) { 
- %><tr Rid='<%= data[item]["Rid"] %>'><td class="wid30"  Fid='F5'><%- (data[item]["F5"] || "").replace(/(\r\n)|(\r)|(\n)/g, "<br />") %></td>
-<td class="wid20"  Fid='F3'><%- getF3(data[item]["F3"]) %></td>
-<td class="wid20"  Fid='F2'><%- getF2(data[item]["F2"]) %></td>
-<td class="wid90" ><div class='btn-group btn-group-xs'><a class="btn btn-default" name="oneremove" url="/todo/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=3" >Done</a>
+if (data[item]["F6"] != group) { group = data[item]["F6"]; %> <tr class="group"><th colspan="14"><b class="glyphicon glyphicon-minus-sign"></b> 发布日期: <%= group %> </th></tr> <% } %><tr Rid='<%= data[item]["Rid"] %>'><td class="wid30" Fid="F5"><%- (data[item]["F5"] || "").replace(/(\r\n)|(\r)|(\n)/g, "<br />") %></td>
+<td class="wid20" Fid="F3"><%- getF3(data[item]["F3"]) %></td>
+<td class="wid20" Fid="F2"><%- getF2(data[item]["F2"]) %></td>
+<td class="wid90"><div class='btn-group btn-group-xs'><a class="btn btn-default" name="submit" url="/zcar/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=3"><font color="#555555">完成</font></a>
 
 <a class="btn btn-default dropdown-toggle" data-toggle="dropdown">&#20;<span class="caret"></span></a>
 
 <ul class="dropdown-menu" role="menu">
-<li><a name="oneupdate" url="/todo/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=0" class="blue"><img class="icon15" src="/img/s/b1.png">Initial</a>
+<li><a name="oneupdate" url="/zcar/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=1" class="green"><font color="#008000">实施</font></a>
 </li>
-<li><a name="oneupdate" url="/todo/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=1" class="green"><img class="icon15" src="/img/s/b2.png">In progress</a>
+<li><a name="submit" url="/zcar/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=2" class="orange"><font color="#ff6600">暂停</font></a>
 </li>
-<li><a name="oneupdate" url="/todo/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=2" class="orange">Paused</a>
+<li><a name="oneupdate" url="/zcar/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=4" class=""><font color="#000000">关闭</font></a>
+</li>
+<li><a name="submit" url="/zcar/update?Rid=<%= data[item]["Rid"] %>&format=json&F2=0" class="blue"><font color="#000080">规划</font></a>
 </li></ul>
 </div>
 </td>
-<td  Fid='F0'><a  class="" href="/todo/show?Rid=<%= data[item]["Rid"] %>" title="Click for detail information"><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></a></td>
-<td class="col-md-1"  Fid='F4'><%- (data[item]["F4"] || "").replace(/(\r\n)|(\r)|(\n)/g, "<br />") %></td>
-<td class="wid30"><a href="/todo/update?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/edit.png"></a></td>
-<td class="wid30"><a href="/todo/copy?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/copy.png"></a></td>
-<td class="wid30"><a name="remove" href="javascript:;" url="/todo/remove?Rid=<%= data[item]["Rid"] %>" name="delete" title=""><img src="/img/remove.png"></a></td>
-</tr><tr Rid='<%= data[item]["Rid"] %>' class='hidden' sub='true' ><td colspan=9  Fid='F1'><label class='pull-left'>Details:</label><span class='pull-left spanval'><%- ("F1" in data[item]) ? data[item]["F1"] : "" %></span></td>
+<td Fid="F0"><a  class="" href="/zcar/show?Rid=<%= data[item]["Rid"] %>" title="Click for detail information"><%= ("F0" in data[item]) ? data[item]["F0"] : "" %></a></td>
+<td class="col-md-2" Fid="F4" width="undefined"><%- (data[item]["F4"] || "").replace(/(\r\n)|(\r)|(\n)/g, "<br />") %></td>
+<td Fid="F6" class="" width="90px"><%= (data[item]["F6"] || "") %></td>
+<td Fid="F7" class="" width="90px"><%= (data[item]["F7"] || "") %></td>
+<td Fid="F8" class="" width="90px"><%= (data[item]["F8"] || "") %></td>
+<td class="" Fid="F10" width="60px"><%= ("F10" in data[item]) ? data[item]["F10"] : "" %></td>
+<td class="" Fid="F11" width="60px"><%= ("F11" in data[item]) ? data[item]["F11"] : "" %></td>
+<td class="wid30"><a href="/zcar/update?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/edit.png"></a></td>
+<td class="wid30"><a href="/zcar/copy?Rid=<%= data[item]["Rid"] %>" title=""><img src="/img/copy.png"></a></td>
+<td class="wid30"><a name="remove" href="javascript:;" url="/zcar/remove?Rid=<%= data[item]["Rid"] %>" name="delete" title=""><img src="/img/remove.png"></a></td>
 </tr>
 
 	<% } %>
@@ -179,17 +191,13 @@
 	<footer>
 	<div class="col-md-12 form-group small">
 		<ul class="pager nomargin pull-left">
-		<li><label>Dependencies：</label></li>
-		<li><a target="_blank" href="https://nodejs.org/">NodeJS</a></li>
-		<li><a target="_blank" href="http://www.mongodb.org/">mongoDB</a></li>
-		<li><a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a></li>
-		<li><a target="_blank" href="http://jquery.com/">jQuery</a></li>
-		<li><a target="_blank" href="https://github.com/">GitHub</a></li>
-		<li><a target="_blank" href="http://itman70s.github.io/richtext">Rich Text</a></li>
+		<li><label>推荐网站:</label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
+		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.4.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
