--- a/app/views/T1XV1show.ejs
+++ b/app/views/T1XV1show.ejs
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-	<title>Todo - Tangrammy</title>
+	<title>ZCar - Tangrammy</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">	
 	<link rel="icon" type="image/ico" href="/img/favicon.ico">
@@ -31,7 +31,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li ><a href='/' title=''>Home</a></li>
-			<li class='active'><a href='/todo/list' title=''>Todo</a></li>
+			<li ><a href='/issues/list' title=''>Issues</a></li>
+			<li ><a href='/todo/list' title=''>Todo</a></li>
+			<li class='active'><a href='/zcar/list' title=''>ZCar</a></li>
 
           </ul>
           <ul class="nav navbar-nav pull-right">
@@ -63,30 +65,41 @@
     </div>
 	<div id="container" class="container" style="padding-top:60px;padding-bottom:60px;">
 	
-<h1>Todo Details</h1>
+<h1>任务详细</h1>
 
 <div class='fields-section well col-md-12'>
 <div class='row'>
-<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='todo'></div><div class='col-md-12'><label class='control-label title-label'>ID<B class='red'>*</B></label>
+<div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='zcar'></div><div class="col-md-12"><label class='control-label title-label'>ID<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%- ((data["F5"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Priority<B class='red'>*</B></label>
-<div class='form-show' readonly=true><% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left col-md-auto'>Low</span> <% } %><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left orange'><img class='icon15' src='/img/s/f4.png' title='Medium'> Medium</span> <% } %><% if (val.contains( "," + "2" + ",")) { %> <span class='pull-left red'><img class='icon15' src='/img/s/f5.png' title='High'> High</span> <% } %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Status<B class='red'>*</B></label>
-<div class='form-show' readonly=true><% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left blue'><img class='icon15' src='/img/s/b1.png' title='Initial'> Initial</span> <% } %><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left green'><img class='icon15' src='/img/s/b2.png' title='In progress'> In progress</span> <% } %><% if (val.contains( "," + "2" + ",")) { %> <span class='pull-left orange'>Paused</span> <% } %><% if (val.contains( "," + "3" + ",")) { %> <span class='pull-left black'>Finished</span> <% } %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Name<B class='red'>*</B></label>
+<div class="col-md-12"><label class='control-label title-label'>Name<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%= ((data["F0"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Detail<B class='red'>*</B></label>
+<div class="col-md-12"><label class='control-label title-label'>Detail<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%- ((data["F1"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Owner<B class='red'>*</B></label>
+<div class="col-md-12"><label class='control-label title-label'>Status<B class='red'>*</B></label>
+<div class='form-show' readonly=true><% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left col-md-auto'><img src='/img/s/b1.png'><span class='blue'>Initial</span></span> <% } %><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left col-md-auto'><img src='/img/s/b2.png'><span class='green'>In progress</span></span> <% } %><% if (val.contains( "," + "2" + ",")) { %> <span class='pull-left col-md-auto'><span class='orange'><img src=' /img/s/b4.png '>Paused</span></span> <% } %><% if (val.contains( "," + "3" + ",")) { %> <span class='pull-left col-md-auto'><span class='black'><img src=' /img/s/b7.png '>Finished</span></span> <% } %><% if (val.contains( "," + "4" + ",")) { %> <span class='pull-left col-md-auto'><img src=' /img/s/b6.png '> Released</span> <% } %></div></div>
+<div class="col-md-12"><label class='control-label title-label'>Priority<B class='red'>*</B></label>
+<div class='form-show' readonly=true><% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left col-md-auto'><img src=' /img/s/f7.png '>Low</span> <% } %><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left col-md-auto'><img src='/img/s/f4.png'><span class='orange'>Medium</span></span> <% } %><% if (val.contains( "," + "2" + ",")) { %> <span class='pull-left col-md-auto'><img src='/img/s/f5.png'><span class='red'>High</span></span> <% } %></div></div>
+<div class="col-md-12"><label class='control-label title-label'>Owner<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%- ((data["F4"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
+<div class="col-md-12"><label class='control-label title-label'>发布日期<B class='red'>*</B></label>
+		<div class='form-show' readonly=true ><%= (data["F6"] || '') %></div></div>
+<div class="col-md-12"><label class='control-label title-label'>开始日期</label>
+		<div class='form-show' readonly=true ><%= (data["F7"] || '') %></div></div>
+<div class="col-md-12"><label class='control-label title-label'>完成日期</label>
+		<div class='form-show' readonly=true ><%= (data["F8"] || '') %></div></div>
+<div class="col-md-12"><label class='control-label title-label'>说明</label>
+		<div class='form-show' readonly=true><%- ((data["F9"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div><div class="col-md-12"><label class='control-label title-label'>代码行数</label>
+		<div class='form-show' readonly=true><%= ((data["F10"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div><div class="col-md-12"><label class='control-label title-label'>Bug量</label>
+		<div class='form-show' readonly=true><%= ((data["F11"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div><div class="col-md-12"><label class='control-label title-label'>Bug信息</label>
+		<div class='form-show' readonly=true><%- ((data["F12"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
 <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
-<div class="col-md-0"><a class="btn btn-primary col-md-2"  href="/todo/list" style="min-width:80px;" title="">OK</a></div>
-<div class="col-md-0"><a class="btn btn-default"  href="/todo/update?Rid=<%= data["Rid"] %>" style="min-width:80px;" title=""><img src="/img/edit.png">Edit</a></div>
-<div class="col-md-0"><a class="btn btn-default"  href="/todo/copy?Rid=<%= data["Rid"] %>" style="min-width:80px;" title=""><img src="/img/copy.png">Copy&Create</a></div>
-<div class="col-md-0"><a class="btn btn-default"  href="/todo/new" style="min-width:80px;" title=""><img src="/img/add.png">Add new</a></div>
+<div class="col-md-0"><a class="btn btn-primary col-md-2"  href="/zcar/list" style="min-width:80px;" title="">OK</a></div>
+<div class="col-md-0"><a class="btn btn-default"  href="/zcar/update?Rid=<%= data["Rid"] %>" style="min-width:80px;" title=""><img src="/img/edit.png">Edit</a></div>
+<div class="col-md-0"><a class="btn btn-default"  href="/zcar/copy?Rid=<%= data["Rid"] %>" style="min-width:80px;" title=""><img src="/img/copy.png">Copy&Create</a></div>
+<div class="col-md-0"><a class="btn btn-default"  href="/zcar/new" style="min-width:80px;" title=""><img src="/img/add.png">Add new</a></div>
 </div></div>
 <span name='history' class='col-md-12'></span>
-<script type='text/javascript'>getOPLogs('T1', 'V1', '<%= data["Rid"] %>');</script>	</div></div>
+	</div></div>
 
 	<div class="go-top">
 	<div class="btn-group">
@@ -122,17 +135,13 @@
 	<footer>
 	<div class="col-md-12 form-group small">
 		<ul class="pager nomargin pull-left">
-		<li><label>Dependencies：</label></li>
-		<li><a target="_blank" href="https://nodejs.org/">NodeJS</a></li>
-		<li><a target="_blank" href="http://www.mongodb.org/">mongoDB</a></li>
-		<li><a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a></li>
-		<li><a target="_blank" href="http://jquery.com/">jQuery</a></li>
-		<li><a target="_blank" href="https://github.com/">GitHub</a></li>
-		<li><a target="_blank" href="http://itman70s.github.io/richtext">Rich Text</a></li>
+		<li><label>推荐网站:</label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
+		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.4.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
