--- a/app/views/TF0XV1new.ejs
+++ b/app/views/TF0XV1new.ejs
@@ -31,7 +31,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li ><a href='/' title=''>Home</a></li>
+			<li ><a href='/issues/list' title=''>Issues</a></li>
 			<li ><a href='/todo/list' title=''>Todo</a></li>
+			<li ><a href='/zcar/list' title=''>ZCar</a></li>
 			<li class='active backup'></li>
 
           </ul>
@@ -77,20 +79,29 @@
 </div>
 <div class='col-md-12'>		<div><label class='control-label title-label'>Application<B class='red'>*</B></label><div class='controls'>
 <% var val = data["F1"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><input type='checkbox' name='F1' value='' checked=true class='hidden' ><div class='min-h20'>
-			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='*'  <%= (val.contains( "," + "*" + ",")) ? "checked=true" : "" %> >All</label>
-			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='TF0/V1'  <%= (val.contains( "," + "TF0/V1" + ",")) ? "checked=true" : "" %> >Roles</label>
-			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='T1/V1'  <%= (val.contains( "," + "T1/V1" + ",")) ? "checked=true" : "" %> >Todo</label>
-			<label class='checkbox-inline col-md-2 '><input type='checkbox' name='F1' value='TF1/V1'  <%= (val.contains( "," + "TF1/V1" + ",")) ? "checked=true" : "" %> >Users</label></div></div></div></div>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='*'  <%= (val.contains( "," + "*" + ",")) ? "checked=true" : "" %> >All</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T2/V1'  <%= (val.contains( "," + "T2/V1" + ",")) ? "checked=true" : "" %> >Users</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T2/V3'  <%= (val.contains( "," + "T2/V3" + ",")) ? "checked=true" : "" %> >UserLogin</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T3/V1'  <%= (val.contains( "," + "T3/V1" + ",")) ? "checked=true" : "" %> >Links</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T4/V1'  <%= (val.contains( "," + "T4/V1" + ",")) ? "checked=true" : "" %> >Todo</label>
+			<label class='checkbox-inline wid100'><input type='checkbox' name='F1' value='T5/V1'  <%= (val.contains( "," + "T5/V1" + ",")) ? "checked=true" : "" %> >Money</label></div><div class='min-h20'>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T5/V2'  <%= (val.contains( "," + "T5/V2" + ",")) ? "checked=true" : "" %> >lend</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T5/V4'  <%= (val.contains( "," + "T5/V4" + ",")) ? "checked=true" : "" %> >brotherlend</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T6/V1'  <%= (val.contains( "," + "T6/V1" + ",")) ? "checked=true" : "" %> >books</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T7/V1'  <%= (val.contains( "," + "T7/V1" + ",")) ? "checked=true" : "" %> >Words</label>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='T9/V1'  <%= (val.contains( "," + "T9/V1" + ",")) ? "checked=true" : "" %> >Booking</label>
+			<label class='checkbox-inline wid100'><input type='checkbox' name='F1' value='T9/V2'  <%= (val.contains( "," + "T9/V2" + ",")) ? "checked=true" : "" %> >Servers</label></div><div class='min-h20'>
+			<label class='checkbox-inline col-md-2 wid100'><input type='checkbox' name='F1' value='TA/V1'  <%= (val.contains( "," + "TA/V1" + ",")) ? "checked=true" : "" %> >VMs</label></div></div></div></div>
 </div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Enable<B class='red'>*</B></label><div class='controls'>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Enable</label><div class='controls'>
 <% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
-			<label class='radio-inline col-md-1 '><input type='radio' name='F2' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> >Enable</label>
-			<label class='radio-inline col-md-1 '><input type='radio' name='F2' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >Disable</label></div></div></div></div>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> >Enable</label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F2' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >Disable</label></div></div></div></div>
 </div>
-<div class='col-md-12'>		<div><label class='control-label title-label'>Default Role<B class='red'>*</B></label><div class='controls'>
+<div class='col-md-12'>		<div><label class='control-label title-label'>Default Role</label><div class='controls'>
 <% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><div class='form-control min-h34'><div class='min-h20'>
-			<label class='radio-inline col-md-1 '><input type='radio' name='F3' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> >Yes</label>
-			<label class='radio-inline col-md-1 '><input type='radio' name='F3' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >No</label></div></div></div></div>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='1'  <%= (val.contains( "," + "1" + ",")) ? "checked=true" : "" %> >Yes</label>
+			<label class='radio-inline col-md-2 '><input type='radio' name='F3' value='0'  <%= (val.contains( "," + "0" + ",")) ? "checked=true" : "" %> >No</label></div></div></div></div>
 </div>
 <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
 <div class="col-md-0"><button type="submit" class="btn btn-primary"    style="min-width:80px;" title="">Save </button></div>
@@ -135,17 +146,13 @@
 	<footer>
 	<div class="col-md-12 form-group small">
 		<ul class="pager nomargin pull-left">
-		<li><label>Dependencies：</label></li>
-		<li><a target="_blank" href="https://nodejs.org/">NodeJS</a></li>
-		<li><a target="_blank" href="http://www.mongodb.org/">mongoDB</a></li>
-		<li><a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a></li>
-		<li><a target="_blank" href="http://jquery.com/">jQuery</a></li>
-		<li><a target="_blank" href="https://github.com/">GitHub</a></li>
-		<li><a target="_blank" href="http://itman70s.github.io/richtext">Rich Text</a></li>
+		<li><label>推荐网站:</label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
+		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.4.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
