--- a/app/views/TF0XV1show.ejs
+++ b/app/views/TF0XV1show.ejs
@@ -31,7 +31,9 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav tops">
             			<li ><a href='/' title=''>Home</a></li>
+			<li ><a href='/issues/list' title=''>Issues</a></li>
 			<li ><a href='/todo/list' title=''>Todo</a></li>
+			<li ><a href='/zcar/list' title=''>ZCar</a></li>
 			<li class='active backup'></li>
 
           </ul>
@@ -71,10 +73,10 @@
 <div class='input-group hidden'><input type='hidden' class='hidden' name='app' value='roles'></div><div class='col-md-12'><label class='control-label title-label'>Role<B class='red'>*</B></label>
 		<div class='form-show' readonly=true><%= ((data["F0"] || '') + '').replace(/(\r\n)|(\r)|(\n)/g, '<br />') %></div></div>
 <div class='col-md-12'><label class='control-label title-label'>Application<B class='red'>*</B></label>
-<div class='form-show' readonly=true><% var val = data["F1"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "*" + ",")) { %> <span class='pull-left col-md-auto'>All</span> <% } %><% if (val.contains( "," + "TF0/V1" + ",")) { %> <span class='pull-left col-md-auto'>Roles</span> <% } %><% if (val.contains( "," + "T1/V1" + ",")) { %> <span class='pull-left col-md-auto'>Todo</span> <% } %><% if (val.contains( "," + "TF1/V1" + ",")) { %> <span class='pull-left col-md-auto'>Users</span> <% } %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Enable<B class='red'>*</B></label>
+<div class='form-show' readonly=true><% var val = data["F1"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "*" + ",")) { %> <span class='pull-left wid100'>All</span> <% } %><% if (val.contains( "," + "T2/V1" + ",")) { %> <span class='pull-left wid100'>Users</span> <% } %><% if (val.contains( "," + "T2/V3" + ",")) { %> <span class='pull-left wid100'>UserLogin</span> <% } %><% if (val.contains( "," + "T3/V1" + ",")) { %> <span class='pull-left wid100'>Links</span> <% } %><% if (val.contains( "," + "T4/V1" + ",")) { %> <span class='pull-left wid100'>Todo</span> <% } %><% if (val.contains( "," + "T5/V1" + ",")) { %> <span class='pull-left wid100'>Money</span> <% } %><% if (val.contains( "," + "T5/V2" + ",")) { %> <span class='pull-left wid100'>lend</span> <% } %><% if (val.contains( "," + "T5/V4" + ",")) { %> <span class='pull-left wid100'>brotherlend</span> <% } %><% if (val.contains( "," + "T6/V1" + ",")) { %> <span class='pull-left wid100'>books</span> <% } %><% if (val.contains( "," + "T7/V1" + ",")) { %> <span class='pull-left wid100'>Words</span> <% } %><% if (val.contains( "," + "T9/V1" + ",")) { %> <span class='pull-left wid100'>Booking</span> <% } %><% if (val.contains( "," + "T9/V2" + ",")) { %> <span class='pull-left wid100'>Servers</span> <% } %><% if (val.contains( "," + "TA/V1" + ",")) { %> <span class='pull-left wid100'>VMs</span> <% } %></div></div>
+<div class='col-md-12'><label class='control-label title-label'>Enable</label>
 <div class='form-show' readonly=true><% var val = data["F2"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left col-md-auto'>Enable</span> <% } %><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left col-md-auto'>Disable</span> <% } %></div></div>
-<div class='col-md-12'><label class='control-label title-label'>Default Role<B class='red'>*</B></label>
+<div class='col-md-12'><label class='control-label title-label'>Default Role</label>
 <div class='form-show' readonly=true><% var val = data["F3"] || "";  val = "," + val.toString() + ",";%><% if (val.contains( "," + "1" + ",")) { %> <span class='pull-left col-md-auto'>Yes</span> <% } %><% if (val.contains( "," + "0" + ",")) { %> <span class='pull-left col-md-auto'>No</span> <% } %></div></div>
 <div class='col-md-12'><div class='panel-footer section-action' style='padding-top:20px;'>
 <div class="col-md-0"><a class="btn btn-primary col-md-2"  href="/roles/list" style="min-width:80px;" title="">OK</a></div>
@@ -119,17 +121,13 @@
 	<footer>
 	<div class="col-md-12 form-group small">
 		<ul class="pager nomargin pull-left">
-		<li><label>Dependencies：</label></li>
-		<li><a target="_blank" href="https://nodejs.org/">NodeJS</a></li>
-		<li><a target="_blank" href="http://www.mongodb.org/">mongoDB</a></li>
-		<li><a target="_blank" href="http://twitter.github.com/bootstrap/">Bootstrap</a></li>
-		<li><a target="_blank" href="http://jquery.com/">jQuery</a></li>
-		<li><a target="_blank" href="https://github.com/">GitHub</a></li>
-		<li><a target="_blank" href="http://itman70s.github.io/richtext">Rich Text</a></li>
+		<li><label>推荐网站:</label></li>
+		<li><a href="http://mgcrea.github.io/angular-strap/#"  title="Share Point">Angular Strap</a></li>
+		<li><a href="http://www.whycss.com/" >前端网址导航</a></li>
 		</ul>
 	</div>
 	<div class="col-md-12 right">
-		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.4.0</a> at 2015.
+		Created by <a href="https://github.com/ItMan70s/Tangrammy/">Tangrammy 0.3.0</a> at 2015.
 	</div>
 	</footer>
 	</div>
